--- a/docs/180.md
+++ b/docs/180.md
@@ -19,9 +19,9 @@
 }
 ```
 
-# 1\. Ilość modeli każdej z marek
+## 1\. Ilość modeli każdej z marek
 
-## Funkcja map
+### Funkcja map
 
 Tworzy obiekt składający się z marki i modelu
 
@@ -30,30 +30,30 @@ var map = function() {
     emit(this.make, this.model);
 };
 ```
-## Funkcja reduce
+### Funkcja reduce
 
 Zlicza modele każdej marki
 
 ```js
 var reduce = function(key, values) {
-var count = 0;
-	for(i in values) {
-		count++;        
-	}
+	var count = 0;
+		for(i in values) {
+			count++;        
+		}
     return count;
 }
 ```
-## Wywołanie
+### Wywołanie
 
 ```js
 db.cars.mapReduce(map, reduce, {out: "models_count"});
 ```
 
-## Wypisanie wyniku
+### Wypisanie wyniku
 
 Wypisuje zredukowane dane, posortowane według zliczonej ilości modeli
 
 ```js
-b.models_count.find().sort({'value': -1}) 
+db.models_count.find().sort({'value': -1}) 
 ```
 
